# mathf

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  math_helper.rs  matrix.rs  quaternion.rs  vector2.rs  vector3.rs
vector/: Cargo.toml
vector/src/: lib.rs
