[package]
name = "mathf"
version = "0.1.0"
authors = ["Julia Naomi <jnaomi@thoughtworks.com>"]
description = "Math crate for Godi Game Engine"
repository = "https://github.com/GodiStudios/mathf"
keywords = ["Vectorial", "Game", "Mathmatics"]
license = "Mozilla Public License Version 2.0"

[dependencies]
