[package]
name = "mathf"
version = "0.1.7"
authors = ["Julia Naomi <jnaomi@thoughtworks.com>"]
description = "Math crate for Godi Game Engine"
repository = "https://github.com/GodiStudios/mathf"
keywords = ["Vectorial", "Game", "Mathmatics"]
license = "MPL-2.0-no-copyleft-exception"

[dependencies]
